# MyCode

./: README.md  test
C++/: c++.code-workspace
C++/Dijkstra/: Ginput  dijkstraSp  dijkstraSp.cpp  dijkstraSp.h  graph  graph.cpp  graph.h  heap  main  main.cpp  main.h  util.cpp  util.h
C++/Dijkstra/Ginput.dSYM/Contents/: Info.plist
C++/Dijkstra/dijkstraSp.dSYM/Contents/: Info.plist
C++/TShingHuaAlgorithm/: main.cpp  main1.cpp
C++/cc_learn/: Exception  FileOpt  FileOpt.cpp  array  array.cpp  classLearn  classLearn.cpp  class_member  demo  demo copy.cpp  demo.cpp  demo1  demo1.cpp  hello  hello.cpp  textToFile
C++/cc_learn/Exception.dSYM/Contents/: Info.plist
C++/cc_learn/FileOpt.dSYM/Contents/: Info.plist
C++/leetcode/: lc1431.cpp  lc1470.cpp  lc1512.cpp  lc1672.cpp
LearnCoding/: tinyG.txt
LearnCoding/Book_Algorithms/src/Fundamentals/: DivideZoro.java  InterviewQuestions1.java  InterviewQuestions2.java  StackNullElement.java
LearnCoding/Book_Algorithms/src/Sort/: MaxPQ.java  MergeSort.java  QuickSort.java  ShellSort.java
LearnCoding/Book_Algorithms/src/basic/: Evaluate.java  GCD.java  UF.java
LearnCoding/Book_Algorithms/src/exam/: VariousMethods.java
LearnCoding/Book_Algorithms/src/graph/: Cycle.java  MyGraph.java
LearnCoding/Book_Algorithms/src/search/: BST.java  BinarySeach.java  RedBlackBST.java
LearnCoding/Java/src/: HelloWorld.java  libHelloWorld.jnilib
LearnCoding/Java/src/JavaGeneric/: ComparableDemo.java  Demo.java  EffectiveGenericBinaryCompatibility.java  EffectiveGenericLegacyLibrary.java  GenericMethod.java  GenericVistor.java  GenericWildcards.java  ListReverseError.java  ReflectionForGenerics.java  ReflectionForPrimitive.java  ReflectionGenericsForReflection.java  Reifiable.java  ReifiableArrayCreation.java  ReifiableToArray.java  ReifiableUnCheckCasts.java  TypeVariable.java  WildcardsGenericMethodCallRestriction.java  WildcardsRestriction.java  WildcardsVersusTypeParam.java
LearnCoding/Java/src/JavaSpecification/: ArrayObject.java  Identifier.java  StringLiteral.java  Unicode.java
LearnCoding/Java/src/demo/: HelloWorld.java
LearnCoding/Java/src/javabasic/: Demo.java  EqualMethod.java  HashSetDemo.java
LearnCoding/Java/src/jni/: Prompt.h  Prompt.java
LearnCoding/LeetCode/src/arrays/: L118PascalTriangle.java  L153Sum.java  L189ArrayRotation.java  TwoSum.java
LearnCoding/TsinghuaAlgorithmsTrain/src/: CountSort.java  Demo.java  Main.java
LearnCoding/TsinghuaAlgorithmsTrain/src/AAddB/: Main.java
LearnCoding/TsinghuaAlgorithmsTrain/src/Bag1/: Main.java
LearnCoding/TsinghuaAlgorithmsTrain/src/Bag2/: Main.java
LearnCoding/TsinghuaAlgorithmsTrain/src/BigZhuanPan/: Main.java
LearnCoding/TsinghuaAlgorithmsTrain/src/BinaryTree/: Main.java
LearnCoding/TsinghuaAlgorithmsTrain/src/Brush/: Main.java  Main1.java
LearnCoding/TsinghuaAlgorithmsTrain/src/BucketSort/: Main.java  Main2.java
LearnCoding/TsinghuaAlgorithmsTrain/src/Chess/: Main.java
LearnCoding/TsinghuaAlgorithmsTrain/src/ClosestPoints/: Main.java
LearnCoding/TsinghuaAlgorithmsTrain/src/ConvexHull/: Main.java
LearnCoding/TsinghuaAlgorithmsTrain/src/CowEatGrass/: Main.java
LearnCoding/TsinghuaAlgorithmsTrain/src/DengNum/: Main.java
LearnCoding/TsinghuaAlgorithmsTrain/src/DivideGroup/: Main.java
LearnCoding/TsinghuaAlgorithmsTrain/src/DropWater/: Main.java  Main1.java
LearnCoding/TsinghuaAlgorithmsTrain/src/Equator/: Main.java
LearnCoding/TsinghuaAlgorithmsTrain/src/GradeSort/: Main.java
LearnCoding/TsinghuaAlgorithmsTrain/src/KMP/: Main.java
LearnCoding/TsinghuaAlgorithmsTrain/src/LCS/: Main.java
LearnCoding/TsinghuaAlgorithmsTrain/src/LoopNode/: Main.java
LearnCoding/TsinghuaAlgorithmsTrain/src/LowBounder/: Main.java
LearnCoding/TsinghuaAlgorithmsTrain/src/Match/: Main.java
LearnCoding/TsinghuaAlgorithmsTrain/src/MaxRect/: Main.java
LearnCoding/TsinghuaAlgorithmsTrain/src/MaxRedRect/: Main.java  Main1.java
LearnCoding/TsinghuaAlgorithmsTrain/src/MergeSort/: Main.java
LearnCoding/TsinghuaAlgorithmsTrain/src/MinK/: Main.java
LearnCoding/TsinghuaAlgorithmsTrain/src/MinimumSwap/: Main.java
LearnCoding/TsinghuaAlgorithmsTrain/src/NQueen/: Main.java
LearnCoding/TsinghuaAlgorithmsTrain/src/NumberBox/: Main.java
LearnCoding/TsinghuaAlgorithmsTrain/src/NumberTriangle/: Main.java
LearnCoding/TsinghuaAlgorithmsTrain/src/PaperCard/: Main.java
LearnCoding/TsinghuaAlgorithmsTrain/src/Persimmon/: Main.java
LearnCoding/TsinghuaAlgorithmsTrain/src/Ques4/: Main.java
LearnCoding/TsinghuaAlgorithmsTrain/src/Queue/: Main.java
LearnCoding/TsinghuaAlgorithmsTrain/src/ReEncode/: Main.java
LearnCoding/TsinghuaAlgorithmsTrain/src/ReEncodeK/: Main.java
LearnCoding/TsinghuaAlgorithmsTrain/src/Rect/: Main.java
LearnCoding/TsinghuaAlgorithmsTrain/src/ReverseString/: Main.java
LearnCoding/TsinghuaAlgorithmsTrain/src/Rhizomys/: Main.java
LearnCoding/TsinghuaAlgorithmsTrain/src/RoadUpdate/: Main.java
LearnCoding/TsinghuaAlgorithmsTrain/src/SequenceCount/: Main.java
LearnCoding/TsinghuaAlgorithmsTrain/src/ShortestPath/: Main.java
LearnCoding/TsinghuaAlgorithmsTrain/src/Stack/: Main.java
LearnCoding/TsinghuaAlgorithmsTrain/src/StackSort/: Main.java
LearnCoding/assigments/src/: TakeAwayManager.java
LearnCoding/coach/src/: Application.java  Mammal.java  Ques2.java  Weather.java
cmake_study/cmake/: CMakeLists.txt
cmake_study/cmake1/: CMakeLists.txt  TutorialConfig.h.in  cmake.code-workspace  mysqrt.cc  tutorial.cc
cmake_study/cmakeOption/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cc
cmake_study/cmakeOption/MathFunctions/: CMakeLists.txt
cmake_study/dijkstra/: CMakeLists.txt
cmake_study/dijkstra/src/: dijkstraSp.cpp  graph.cpp  graph.h  heap.cpp  heap.h  main.cpp  main.h  util.cpp
computerphotography/C++/helloworld/: CMakeLists.txt  opencv_1.cpp
computerphotography/course_zhengjiangdaxue/Lab1/: CMakeLists.txt  helloworld  opencv_1.cpp
computerphotography/course_zhengjiangdaxue/Lab2/: CMakeLists.txt  assign_2.cpp  note.txt
computerphotography/notes/: cv_1.Introduction.txt
(+132 files in other folders)
